# ask

./: .gitignore  CMakeLists.txt  README.md  WINDOWS_BUILD_RUN_NOTES.md
.claude/: settings.local.json
assets/shaders/: sprite.frag  sprite.vert
engine/: CMakeLists.txt
engine/include/engine/: application.h  input.h  renderer.h  shader.h  sprite.h  texture.h  window.h
engine/src/: application.cpp  input.cpp  renderer.cpp  shader.cpp  sprite.cpp  texture.cpp  window.cpp
example/: CMakeLists.txt  main.cpp
lessons/: 01-first-fragment-shader.md  learning-progress.md  shader-course-plan.md
